@@ -157,7 +157,7 @@ GameController::~GameController() {
 	delete[] m_drawContext;
 }
 
-void GameController::setMultiplayerController(std::shared_ptr<MultiplayerController> controller) {
+void GameController::setMultiplayerController(MultiplayerController* controller) {
 	if (controller == m_multiplayer) {
 		return;
 	}
@@ -171,7 +171,7 @@ void GameController::clearMultiplayerController() {
 		return;
 	}
 	m_multiplayer->detachGame(this);
-	m_multiplayer.reset();
+	m_multiplayer = nullptr;
 }
 
 void GameController::setOverride(const GBACartridgeOverride& override) {
