@@ -62,8 +62,8 @@ public:
 	void setInputController(InputController* controller) { m_inputController = controller; }
 	void setOverrides(Configuration* overrides) { m_threadContext.overrides = overrides; }
 
-	void setMultiplayerController(std::shared_ptr<MultiplayerController> controller);
-	std::shared_ptr<MultiplayerController> multiplayerController() { return m_multiplayer; }
+	void setMultiplayerController(MultiplayerController* controller);
+	MultiplayerController* multiplayerController() { return m_multiplayer; }
 	void clearMultiplayerController();
 
 	void setOverride(const GBACartridgeOverride& override);
@@ -176,7 +176,7 @@ private:
 	bool m_turboForced;
 
 	InputController* m_inputController;
-	std::shared_ptr<MultiplayerController> m_multiplayer;
+	MultiplayerController* m_multiplayer;
 
 	struct GameControllerLux : GBALuminanceSource {
 		GameController* p;
